welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:2: error: not found: value compteur
  ecritMessage(compteur)
               ^Diagonal:6: error: not found: value compteur
      ecritMessage(compteur)
                   ^Diagonal:7: error: not found: value compteur
      compteur +=1
      ^